src/objects/RegionMasterInfo__c.object
<CustomObject>
    <description>This object contains details about Language,District,Sub District,Zip Codes for THAILAND .</description>
    <fields>
        <fullName>District__c</fullName>
        <description>Contains All list of district of Thailand</description>
        <label>District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Thai</fullName>
                </value>
                <value>
                    <fullName>English</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Province__c</fullName>
        <description>List of all provinces of Thailand</description>
        <label>Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_DIstrict__c</fullName>
        <description>Contains all list of Sub District</description>
        <label>Sub DIstrict</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <description>Contains all the list of Zip/Postal codes for Thailand</description>
        <label>ZipCode</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>RegionMasterInfo</label>
    <nameField>
        <label>RegionMasterInfo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RegionMasterInfos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>